static/css/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
}

.conteiner {
    display: flex;
    min-height: 100vh;
}
.menu {
    width: 200px;
    background-color: #2c3e50;
    padding: 20px;
    color: whitesmoke;
}

.menu h2 {
    margin-bottom: 20px;
}

.menu a {
    display: block;
    color: white;
    text-decoration: none;
    margin: 10px 0;
}

.menu a:hover {
    text-decoration: underline;
}
.content {
    flex: 1;
    padding: 30px;
}
 /*style sidebar*/
.sidebar {
    width: 280px;
    background: #1a2e1a;
    padding: 25px 20px;
    position: fixed; 
    height: 100vh;
}

.sidebar-nav a {
    display: flex;
    align-items: center;
    gap: 15px;
    padding: 13px 17px;
    color: #d4c4a8;
    text-decoration: none;
    font-size: 0.95rem;
    border-radius: 8px;
    margin-bottom: 5px;
    transition: all 0.3s ease;
    border: 1px solid transparent;
}

.sidebar-nav a:hover {
    background: rgba(255,255,255,0.05);
    color: #e8dcc8;
    border: 1px solid #8fbc8f;
    box-shadow: 0 0 5px #8fbc8f, 
                0 0 10px rgba(143, 188, 143, 0.5), 
                inset 0 0 5px rgba(143, 188, 143, 0.1);
}

.sidebar-nav a .icon {
    width: 20px;
    height: 20px;
}

.sidebar-nav a .icon svg {
    width: 18px;
    height: 18px;
    stroke: currentColor;
    fill: none;
    stroke-width: 1.5;
}

.sidebar-section-title {
    font-size: 0.7rem;
    color: #6b8c6b;
    text-transform: uppercase;
    letter-spacing: 2px;
    padding: 20px 18px 10px;
}
/*style artiste*/
.sidebar-artists {
    flex: 1;
    overflow-y: auto;
}

.sidebar-artist {
    display: flex;
    align-items: center;
    gap: 12px;
    padding: 10px 15px;
    color: #d4c4a8;
    text-decoration: none;
    border-radius: 8px;
    transition: all 0.2s;
    margin-bottom: 3px;
}

.sidebar-artist:hover {
    background: rgba(255,255,255,0.1);
    color: #e8dcc8;
}

.sidebar-artist img {
    width: 45px;
    height: 45px;
    border-radius: 50%;
    object-fit: cover;
}

.sidebar-artist-info h4 {
    font-size: 0.9rem;
    font-weight: 500;
    margin-bottom: 2px;
    color: #e8dcc8;
}

.sidebar-artist-info p {
    font-size: 0.75rem;
    color: #6b8c6b;
}

